--- a/index.html
+++ b/index.html
@@ -4,3 +4,7 @@ Hello there, awesome person!
     Hello there, awesome person! 
   </body>
 </html>
+<html>
+    <head>
+        <title>My awesome web page</title>
+    </head>
